# gossip

./: .env.example  .gitignore  BUILD.md  PRODUCT.md  README.md  REMOVED.md  TODO.md  architecture.html  gossip.yaml  pyproject.toml
config/: .tirith-install-failed  SOUL.md  channel_directory.json  config.yaml  state.db  state.db-shm  state.db-wal
config/cron/: jobs.json
config/hooks/: gossip-logger
config/memories/: MEMORY.md  USER.md
config/sessions/: 20260315_175649_fbc15197.jsonl  20260316_170040_af21eaac.jsonl  20260316_172739_3fdd7233.jsonl  20260316_172739_b69e7b98.jsonl  20260316_172739_c7d6a8fe.jsonl  request_dump_20260315_175649_fbc15197_20260315_181051_769611.json  request_dump_20260315_175649_fbc15197_20260315_181139_795041.json  request_dump_20260315_175649_fbc15197_20260315_181203_004751.json  request_dump_20260315_175649_fbc15197_20260315_181232_952666.json  request_dump_20260315_175649_fbc15197_20260315_182927_008007.json  request_dump_20260315_175649_fbc15197_20260315_183327_890078.json  (+13 more)
data/: .last_captured_msg_id
gossip/: __init__.py  compactor.py  config.py  db.py  discord_commands.py  dossiers.py  email_filter.py  engine.py  identity.py  logger.py  proactive.py  sabotage.py  synthesizer.py
gossip_tools/: __init__.py  context_builder.py  dossier_tools.py  dynamics_tools.py  gossip_gen.py  idle_check.py  image_tools.py  intel_tools.py  location_tools.py  member_tools.py  sync_tools.py
openclaw/: HEARTBEAT.md  SKILL.md  SOUL.md  TOOLS.md
portal/: __init__.py  app.py  deps.py
scripts/: setup.sh  setup_wizard.py  start.sh  test_all.py
(+36 files in other folders)
